# webgpu-examples

./: Cargo.toml  main.rs  shader.wgsl
examples/ch02/: common.rs  first_triangle.rs  first_triangle.wgsl  second_triangle.rs  triangle_vertex_color.wgsl
examples/ch03/: point_line.rs  point_line.wgsl  triangles.rs  triangles.wgsl
examples/ch04/: shader.wgsl  square.rs  square_index.rs  triangle.rs
examples/ch05/: rotation.rs  scaling.rs  translation.rs  view_projection.rs
examples/ch06/: camera.rs  camera_control.rs  cube_face_color.rs  cube_vertex_color.rs  line3d.rs  line3d.wgsl  rotate_cube.rs
examples/ch07/: common.rs  cube.rs
examples/ch12/: cube_instance.rs  cube_instance.wgsl  two_cubes.rs  two_cubes.wgsl
examples/common/: transforms.rs  vertex_data.rs
raytracer/ex02_sphere_raytrace/: index.html
raytracer/ex04_visualize_depth/: index.html
raytracer/example_01/: index.html
raytracer/variable_color/: index.html
