[package]
name = "test"
version = "0.0.1"
edition = "2018"
resolver = "2"

[dependencies]
wgpu = "0.11"
cgmath = "0.18"
env_logger = "0.9"
futures = "0.3"
gfx-hal = "0.9"
image = "0.23"
log = "0.4"
pollster = "0.2"
winit = "0.25"
anyhow = "1.0"
bytemuck = { version = "1.4", features = ["derive"] }

[[bin]]
name ="test"
path ="main.rs"

[[example]]
name = "ch02_first_triangle"
path = "examples/ch02/first_triangle.rs"

[[example]]
name = "ch02_second_triangle"
path = "examples/ch02/second_triangle.rs"

[[example]]
name = "ch03_point_line"
path = "examples/ch03/point_line.rs"

[[example]]
name = "ch03_triangles"
path = "examples/ch03/triangles.rs"

[[example]]
name = "ch04_triangle"
path = "examples/ch04/triangle.rs"

[[example]]
name = "ch04_square"
path = "examples/ch04/square.rs"

[[example]]
name = "ch04_square_index"
path = "examples/ch04/square_index.rs"

[[example]]
name = "ch05_scaling"
path = "examples/ch05/scaling.rs"

[[example]]
name = "ch05_translation"
path = "examples/ch05/translation.rs"

[[example]]
name = "ch05_rotation"
path = "examples/ch05/rotation.rs"

[[example]]
name = "ch05_view_projection"
path = "examples/ch05/view_projection.rs"

[[example]]
name = "ch06_line3d"
path = "examples/ch06/line3d.rs"

[[example]]
name = "ch06_cube_face_color"
path = "examples/ch06/cube_face_color.rs"

[[example]]
name = "ch06_cube_vertex_color"
path = "examples/ch06/cube_vertex_color.rs"

[[example]]
name = "ch06_rotate_cube"
path = "examples/ch06/rotate_cube.rs"

[[example]]
name = "ch06_camera_control"
path = "examples/ch06/camera_control.rs"

[[example]]
name = "ch12_two_cubes"
path = "examples/ch12/two_cubes.rs"